kubernetes/flask-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2022-06-21T19:49:47Z"
  generation: 1
  labels:
    app: flask-web
  name: flask-web
  namespace: flask
  resourceVersion: "1079"
  uid: 6cf85280-beaf-4cf4-8f5c-6e8fa99cbdbe
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: flask-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flask-web
    spec:
      containers:
      - image: k3d-k3d-registry:5050/flask-web:v1.0
        imagePullPolicy: IfNotPresent
        name: flask-web
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-06-21T19:49:48Z"
    lastUpdateTime: "2022-06-21T19:49:48Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-06-21T19:49:47Z"
    lastUpdateTime: "2022-06-21T19:49:48Z"
    message: ReplicaSet "flask-web-f7899d96c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
