kubernetes/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-web-service-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "abhishek-nuc.fritz.box"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: flask-web-service
            port:
              number: 80
